--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Vim Cheat Sheet</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="../FavIcons/favicon-vim.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon-vim.ico" type="image/x-icon" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   </head>
 
