update; add prettierrc

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -180,10 +180,6 @@
                 <td><code>i</code> <code>a</code></td>
                 <td>insert/append in cursor</td>
               </tr>
-              <tr class="type-normal unused">
-                <td><code>ea</code></td>
-                <td>append at end of word</td>
-              </tr>
               <tr class="type-normal">
                 <td><code class="unused">I</code> <code>A</code></td>
                 <td>insert/append in line</td>
@@ -290,7 +286,8 @@
                   <code>^wk</code> <code>^wl</code>
                 </td>
                 <td>
-                  focus left/lower/upper/right window <a href="#anchor-window-focus"><i class="fa-regular fa-circle-up"></i></a>
+                  focus left/lower/upper/right window
+                  <a href="#anchor-window-focus"><i class="fa-regular fa-circle-up"></i></a>
                 </td>
               </tr>
               <tr class="type-normal unused">
@@ -315,7 +312,8 @@
                   <code>:bprev</code>
                 </td>
                 <td>
-                  next/prev buffer <a href="#anchor-switch-buffer"><i class="fa-regular fa-circle-up"></i></a>
+                  next/prev buffer
+                  <a href="#anchor-switch-buffer"><i class="fa-regular fa-circle-up"></i></a>
                 </td>
               </tr>
 
@@ -367,7 +365,8 @@
               <tr class="type-last unused">
                 <td><code>:qa</code></td>
                 <td>
-                  = <code>:quitall</code> <a href="#anchor-lqq"><i class="fa-regular fa-circle-up"></i></a>
+                  = <code>:quitall</code>
+                  <a href="#anchor-lqq"><i class="fa-regular fa-circle-up"></i></a>
                 </td>
               </tr>
               <tr class="type-normal unused">
@@ -511,19 +510,19 @@
                   <a href="https://github.com/ibhagwan/fzf-lua">fzf-lua</a>
                 </td>
               </tr>
-              <tr class="type-normal unused">
+              <tr class="type-normal">
                 <td><code>⎈⎵</code></td>
                 <td>find files (root dir)</td>
               </tr>
               <tr class="type-normal">
                 <td><code>⎈fr</code></td>
-                <td>find recent files</td>
+                <td>find recent files (global)</td>
               </tr>
-              <tr class="type-normal">
+              <tr class="type-normal unused">
                 <td><code>⎈sc</code></td>
                 <td>search command history</td>
               </tr>
-              <tr class="type-normal">
+              <tr class="type-normal unused">
                 <td><code>⎈sk</code></td>
                 <td>search keymaps</td>
               </tr>
@@ -556,6 +555,26 @@
               <tr class="type-normal">
                 <td><code>⎈n</code></td>
                 <td>notification history</td>
+              </tr>
+
+              <tr class="separator desc">
+                <td colspan="2">
+                  <a href="https://github.com/echasnovski/mini.surround">mini.surround</a>
+                </td>
+              </tr>
+              <tr class="type-normal">
+                <td><code>gsa</code> <code>gsd</code> <code>gsr</code></td>
+                <td>add/delete/replace surrounding</td>
+              </tr>
+
+              <tr class="separator desc">
+                <td colspan="2">
+                  <a href="https://github.com/folke/flash.nvim">flash.nvim</a>
+                </td>
+              </tr>
+              <tr class="type-normal">
+                <td><code>s</code></td>
+                <td>flash (闪现)</td>
               </tr>
             </tbody>
           </table>
