--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <td>insert/append in cursor</td>
               </tr>
               <tr class="type-normal">
-                <td><code class="unused">I</code> <code>A</code></td>
+                <td><code>I</code> <code>A</code></td>
                 <td>insert/append in line</td>
               </tr>
               <tr class="type-normal">
@@ -643,6 +643,20 @@
         </div>
       </div>
     </div>
+
+    <div class="info-button" id="infoButton">
+      <i class="fas fa-info-circle"></i>
+      <div class="info-content">
+        <div class="info-header">Mode Colors</div>
+        <div class="info-item type-normal">Normal Mode</div>
+        <div class="info-item type-visual">Visual Mode</div>
+        <div class="info-item type-insert">Insert Mode</div>
+        <div class="info-item type-last">Command Mode</div>
+        <div class="info-item type-operator">Operator</div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
+    <script src="info-btn.js"></script>
   </body>
 </html>
