--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
               </tr>
               <tr class="type-normal">
                 <td>
-                  <code>h</code> <code>j</code> <br />
-                  <code>k</code> <code>l</code>
+                  <code>h</code> (<code>⌫</code>) <code>l</code> <br />
+                  <code>j</code> (<code>↩︎</code>) <code>k</code>
                 </td>
-                <td>left = <code>⌫</code>/down = <code>↩︎</code>/up/right</td>
+                <td>
+                  left/right <br />
+                  down/up
+                </td>
               </tr>
               <tr class="type-normal">
                 <td><code>^b</code> <code>^f</code></td>
@@ -341,11 +344,11 @@
               </tr>
               <tr class="type-last">
                 <td><code>:w</code></td>
-                <td>write file (save)</td>
+                <td><code>:write</code> file (save)</td>
               </tr>
               <tr class="type-last">
                 <td><code>:q</code></td>
-                <td>= <code>:quit</code></td>
+                <td><code>:quit</code></td>
               </tr>
               <tr class="type-last">
                 <td><code>:q!</code></td>
@@ -355,7 +358,7 @@
                 <td><code>:wq</code></td>
                 <td>write and quit</td>
               </tr>
-              <tr class="type-last">
+              <tr class="type-last unused">
                 <td><code>:x</code></td>
                 <td>
                   write (if changes) and quit <br />
@@ -387,7 +390,7 @@
               </tr>
               <tr class="type-operator type-visual">
                 <td><code>d</code></td>
-                <td>delete</td>
+                <td>delete (cut)</td>
               </tr>
               <tr class="type-operator type-visual">
                 <td><code>y</code></td>
