--- a/index.html
+++ b/index.html
@@ -289,6 +289,26 @@
               </tr>
 
               <tr class="separator desc">
+                <td colspan="2">Spell</td>
+              </tr>
+              <tr class="type-normal">
+                <td><code>z=</code></td>
+                <td>spell suggest</td>
+              </tr>
+              <tr class="type-normal">
+                <td><code>zg</code> <code>zw</code></td>
+                <td>mark word as good/wrong</td>
+              </tr>
+              <tr class="type-normal unused">
+                <td><code>zug</code> <code>zuw</code></td>
+                <td>undo good/wrong</td>
+              </tr>
+              <tr class="type-normal">
+                <td><code>]s</code> <code>[s</code></td>
+                <td>jump to next/prev misspelled word</td>
+              </tr>
+
+              <tr class="separator desc">
                 <td colspan="2">Window &amp; Buffer &amp; Tab</td>
               </tr>
               <tr class="type-normal unused">
